# zed-systemd

./: Makefile  extension.toml
examples/: example.service
grammars/systemd_service/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
grammars/systemd_service/bindings/c/: tree-sitter-systemd-service.pc.in
grammars/systemd_service/bindings/go/: binding.go  binding_test.go
grammars/systemd_service/bindings/node/: binding.cc  index.js
grammars/systemd_service/bindings/python/tests/: test_binding.py
grammars/systemd_service/bindings/python/tree_sitter_systemd_service/: __init__.py  binding.c
grammars/systemd_service/bindings/rust/: build.rs  lib.rs
grammars/systemd_service/bindings/swift/TreeSitterSystemdService/: systemd_service.h
grammars/systemd_service/bindings/swift/TreeSitterSystemdServiceTests/: TreeSitterSystemdServiceTests.swift
grammars/systemd_service/src/: grammar.json  node-types.json  parser.c
syntaxes/: systemd_service.scm
