[package]
name = "tree-sitter-systemd-service"
description = "Syntax Highlight for .service files"
version = "0.1.0"
authors = ["jd-apprentice <contacto@jonathan.com.ar>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "systemd-service"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jd-apprentice/zed-systemd"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
